# STOCK_1

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHEATSHEET.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_VERIFICATION.ps1  DEPLOY_FREE.md  Dockerfile  FEATURE_COMPLETION_REPORT.md  FLOW_TEST_VERIFICATION.md  Makefile  PROMPTS_HISTORY.md  Procfile  QUICKSTART_DEPLOY.md  QUICKSTART_DEV.md  RAILWAY_DEPLOYMENT.md  README.md  README_DEPLOYMENT.txt  START.bat  STARTUP_GUIDE.md  STOP.bat  TAIWAN_STOCK_FEATURE.md  TEST_FINAL_REPORT.md  TEST_SUMMARY.txt  TEST_VERIFICATION_REPORT.md  TW_STOCK_DYNAMIC.md  VALIDATION_COMPLETE.md  auto-update-webhook.ps1  auto_seed.py  check-deployment.ps1  debug_finnhub.py  debug_yahoo_crumb.py  deep_debug_crumb.py  diagnose.py  direct_seed.py  docker-compose.yml  (+42 more)
.github/: copilot-instructions.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: DOCKER_VISUAL_GUIDE.md  PERFORMANCE_DEPLOYMENT_CHECKLIST.md
specs/001-linebot-us-stock-news/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-linebot-us-stock-news/checklists/: requirements.md
src/: config.py  exceptions.py  main.py  test_dynamic_client.py  test_us_stock.py
src/api/: admin.py  webhooks.py
src/data/: tw_stocks.json
src/db/: database.py  init_db.py  repositories.py
src/handlers/: index_handler.py  news_handler.py  stock_handler.py  tw_stock_handler.py  tw_stock_search_handler.py
src/integrations/: alpha_vantage.py  alternative_scraper.py  finnhub_client.py  goodinfo_scraper.py  google_news.py  iex_cloud.py  tw_fundamentals.py  tw_rating_scraper.py  tw_stock_dynamic.py  tw_stock_integration.py  twelve_data_client.py  web_scraper.py  yahoo_finance.py
src/models/: database.py  domain.py
src/services/: fundamental_data.py  market_data.py  news_service.py  tw_stock_service.py
src/utils/: cache.py  formatters.py  fundamentals_fallback.py  logger.py  market_hours.py  ratings_fallback.py  retry.py  stock_fundamentals.py  validators.py  valuation.py
tests/: conftest.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: test_error_handling.py  test_index_handler.py  test_index_query_e2e.py  test_news_query_e2e.py  test_stock_handler.py  test_stock_query_e2e.py  test_tw_stock_query_e2e.py  test_webhook_signature.py
tests/unit/: test_config.py  test_formatters.py  test_news_handler.py  test_tw_stock_handler.py  test_validators.py
(+5 files in other folders)
